src/components/Contact/Contact.module.css
.wrapper {
	padding: 3rem 1rem 4rem 1rem;

	display: flex;
	flex-direction: column;
	gap: 1rem;
}

.locationWrapper {
	display: grid;
	grid-template-areas: 
		"heading heading heading"
		"map planet contact";
	grid-template-columns: 2fr 1fr 1fr;
	gap: 1rem;
}

.findUsHeading {
	grid-area: heading;
}

.findUsHeading,
.contactUsHeading,
.partnersHeading {
	font-family: Trench;
	font-size: 2.2rem;
	color: white;
}

.partnersHeading {
	text-align: center;
}

.galaxyMapCont {
	grid-area: map;

	width: 100%;
	height: 100%;
	overflow: hidden;
	aspect-ratio: 16 / 9;
	display: flex;
	justify-content: center;
}

.galaxyMapCont,
.planetMapCont,
.cecLogoCont {
	width: 100%;
	height: 100%;
}

.galaxyMap,
.planetMap,
.cecLogo {
	width: 100%;
	height: 100%;
	padding: 6px;
	border: 1px solid rgb(104, 104, 104);

	object-fit: cover;
	object-position: center;
}

.planetAndLogoCont {
	grid-area: planet;

	display: flex;
	flex-direction: column;
	justify-content: flex-end;
	gap: 1rem;
}

.contactCont {
	grid-area: contact;

	padding: 1rem 0.5rem;
	background-color: rgb(20, 20, 20);
	border: 1px solid rgb(104, 104, 104);

	align-self: flex-end;

	display: grid;
	grid-template-areas: 
		"location"
		"email"
		"webpage";
}

.locationCont {
	grid-area: location;
}

.emailCont {
	grid-area: email;
}

.webpageCont {
	grid-area: webpage;
}

.locationCont,
.emailCont,
.webpageCont {
	display: flex;
}

.emailCont,
.webpageCont {
	margin-top: 1rem;
}

.emailCont,
.webpageCont {
	align-items: end;
}

.location {
	font-size: 1rem;
}

.address {
	font-family: 'DINNext bold';
	font-size: 1.2rem;
}

.emailCont > p {
	display: flex;
	align-items: center;
}

.webpageCont > a {
	color: rgb(68, 102, 255);
	transition: 0.3s color ease;
}

.webpageCont > a:hover {
	color: rgb(37, 77, 255);
}

.iconCont {
	margin-top: 4px;
	margin-right: 12px;
	display: flex;
	flex-direction: column;
}

.iconCont > img{
	width: 30px;
}

.contactFormsCont {
	display: flex;
	gap: 2rem;
}

.largeOrderFormCont,
.requestPriceFormCont {
	width: 100%;
	max-width: 700px;

	padding: 1rem;
	background-color: rgb(20, 20, 20);
	border: 1px solid rgb(104, 104, 104);

	display: flex;
	flex-direction: column;
}

.largeOrderForm,
.requestPriceForm {
	flex: 1;

	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.contactFormHeading {
	margin: 0.5rem 0 2rem 0;

	font-family: 'DINNext bold';
}

.inputCont {
	margin: 1.3rem 0;

	display: flex;
	flex-direction: column;
}

.inputCont > input {
	margin-top: 4px;
	border-bottom: 1px solid rgb(104, 104, 104);
}

.inputCont > input:focus {
	border-bottom: 1px solid rgb(192, 192, 192);
}

.submitBtnCont {
	flex: 1;

	display: flex;
	align-items: flex-end;
}

.submitFormBtn {
	width: 100%;
	padding: 1rem 0.5rem;

	font-family: 'DINNext bold';

	transition: all 0.5s ease;
}

.messageTextarea,
.selectEl {
	margin-top: 4px;
	background-color: rgb(20, 20, 20);
}

.messageTextarea {
	max-width: 100%;
	min-width: 200px;
	max-height: 150px;
	min-height: 80px;

	padding: 4px 6px;
	border: 1px solid rgb(104, 104, 104);
}

.messageTextarea:focus {
	border: 1px solid rgb(192, 192, 192);
}

.partnersCont {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.logoWrapper {
	border: 1px solid rgb(104, 104, 104);
}

.logoCont {
	margin: 6px;

	background-color: white;

	display: flex;
	justify-content: center;
	align-items: center;
}

.logoCont > a {
	padding: 1rem 2rem;
}

.partnerLogo {
	width: 100px;
}

@media (max-width: 1200px) {
	.locationWrapper {
		grid-template-areas: 
			"heading heading"
			"map planet"
			"contact contact";
		grid-template-columns: 2fr 1fr;
		justify-content: center;
	}

	.contactCont {
		padding: 1rem;

		grid-template-areas: 
		"location email webpage";
		align-items: flex-start;
		gap: 1rem;
	}

	.emailCont,
	.webpageCont {
		margin-top: 0;
	}
}

@media (max-width: 880px) {
	.location {
		font-size: 0.9rem;
	}
	
	.address {
		font-size: 1rem;
	}
	
	.emailCont > p {
		font-size: 0.9rem;
	}

	.webpageCont > .iconCont {
		align-self: flex-start;
	}
	
	.webpageCont > a {
		font-size: 0.9rem;
	}
	
	.iconCont {
		margin-right: 8px;
	}
}

@media (max-width: 768px) {
	.wrapper {
		padding: 2rem 1rem 3rem 1rem;
	}

	.locationWrapper {
		grid-template-areas: 
			"heading"
			"map"
			"planet"
			"contact";
		grid-template-columns: 1fr;
		grid-template-rows: min-content 2fr 1fr 1fr;
		justify-content: center;
	}

	.planetAndLogoCont {
		flex-direction: row;
	}

	.contactCont {
		grid-template-areas: 
		"location email"
		"webpage webpage";
		justify-items: center;
	}

	.contactFormsCont {
		display: flex;
		flex-direction: column;
		gap: 2rem;
	}
}

@media (max-width: 550px) {
	.logoCont {
		flex-direction: column;
	}

	.logoCont > a {
		padding: 1rem;
	}

	.partnerLogo {
		width: 70px;
	}
}

@media (max-width: 500px) {
	.contactCont {
		grid-template-areas: 
			"location"
			"email"
			"webpage";
		justify-items: start;
	}
}

